--- a/004/templates/guest.html
+++ b/004/templates/guest.html
@@ -1,10 +1,12 @@
-<html>
-	<head>
-		<title>Passport Test</title>
-		<http-equiv name="Content-Type", "text/html; encoding=utf-8">
-	</head>
-	<body>
-		<h1>Гость</h1>
-		<div>Войдите с помощью <a href="/auth/login">пароля</a>.</div>
-	</body>
-</html>
+{% extends "master.html" %}
+
+{% block content %}
+	<div>
+		<form class="form-signin" action="/auth/login" mathod="POST">
+		<h1>Ну, входи, гость...</h1>
+			<input name="login" type="text" class="form-control" placeholder="Логин" autofocus>
+			<input name="password" type="password" class="form-control" placeholder="Пароль">
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+		</form>
+	</div>
+{% endblock %}
