Added PassportJS link to the master template

--- a/004/templates/master.html
+++ b/004/templates/master.html
@@ -38,6 +38,7 @@
           <ul class="nav navbar-nav">
             <li><a href="http://jspirates.com">Сайт подкаста</a></li>
             <!-- li><a href="http://jspirates.com">Репозиторий эпизода</a></li -->
+            <li><a href="http://passportjs.org">PassportJS</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           {% if user %}
