--- a/004/templates/guest.html
+++ b/004/templates/guest.html
@@ -4,7 +4,7 @@
 	<div>
 		<form class="form-signin" action="/auth/login" method="POST">
 		<h1>Ну, входи, гость...</h1>
-			<input name="login" type="text" class="form-control" placeholder="Логин" autofocus>
+			<input name="username" type="text" class="form-control" placeholder="Логин" autofocus>
 			<input name="password" type="password" class="form-control" placeholder="Пароль">
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
 		</form>
