--- a/004/templates/user.html
+++ b/004/templates/user.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="jumbotron">
 		<h1>Ну, здравствуй, гость</h1>
-		<p>&mdash; Мариванна, можно <a href="/auth/login">выйти</a>?</p>
+		<p>&mdash; Мариванна, можно <a href="/auth/logout">выйти</a>?</p>
 		<p>&mdash; Уйди, Петров, с глаз моих долой... И без родителей не возвращайся!</p>
 	</div>
 {% endblock %}
