--- a/004/templates/user.html
+++ b/004/templates/user.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<div class="jumbotron">
-		<h1>Пользователь &laquo;{{user.id}}&raquo;</h1>
+		<h1>Пользователь &laquo;{{user.displayName}}&raquo;</h1>
 		<p>&mdash; Мариванна, можно <a href="/auth/logout">выйти</a>?</p>
 		<p>&mdash; Уйди, Петров, с глаз моих долой... И без родителей не возвращайся!</p>
 	</div>
