Facebook auth templates

--- a/004/templates/master.html
+++ b/004/templates/master.html
@@ -37,6 +37,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="http://passportjs.org">Passport</a></li>
+            <li><a href="https://developers.facebook.com/docs/web/">Facebook for Web Developers</a>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           {% if user %}
