--- a/004/templates/guest.html
+++ b/004/templates/guest.html
@@ -6,7 +6,9 @@
 		<h1>Ну, входи, гость...</h1>
 			<input name="username" type="text" class="form-control" placeholder="Логин" autofocus>
 			<input name="password" type="password" class="form-control" placeholder="Пароль">
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+			<button class="btn btn-lg btn-success btn-block" type="submit">Войти</button>
+			<div style="text-align: center; padding: 0.3em;">или</div>
+			<a href="/auth/facebook" class="btn btn-lg btn-primary btn-block">Facebook</a>
 		</form>
 	</div>
 {% endblock %}
