Twitter auth templates

--- a/004/templates/master.html
+++ b/004/templates/master.html
@@ -38,6 +38,7 @@
           <ul class="nav navbar-nav">
             <li><a href="http://passportjs.org">Passport</a></li>
             <li><a href="https://developers.facebook.com/docs/web/">Facebook for Web Developers</a>
+            <li><a href="https://dev.twitter.com/docs/twitter-for-websites">Twitter for Websites</a>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           {% if user %}
