--- a/004/templates/guest.html
+++ b/004/templates/guest.html
@@ -9,6 +9,7 @@
 			<button class="btn btn-lg btn-success btn-block" type="submit">Войти</button>
 			<div style="text-align: center; padding: 0.3em;">или</div>
 			<a href="/auth/facebook" class="btn btn-lg btn-primary btn-block">Facebook</a>
+			<a href="/auth/twitter" class="btn btn-lg btn-primary btn-block">Twitter</a>
 		</form>
 	</div>
 {% endblock %}
